src/objects/Parts_Order__c.object
<CustomObject>
    <fields>
        <fullName>Anti_Fake_Interface_Msg__c</fullName>
        <label>Anti Fake Interface Msg</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Anti_Fake_Interface_Status__c</fullName>
        <label>Anti Fake Interface Status</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Anti_Fake_SN__c</fullName>
        <label>Anti Fake SN</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Anti_Fake_result__c</fullName>
        <label>Anti-Fake result</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pass</fullName>
                </value>
                <value>
                    <fullName>Fail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CSC_Report_Orig_Part_Number__c</fullName>
        <label>Orig Part Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSC_Report_Parts_Consumed__c</fullName>
        <formula>IF(TEXT(Parts_Usage__c) = &quot;Used/Consumed&quot;, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parts Consumed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Case_PartsOrder__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Parts Order</relationshipLabel>
        <relationshipName>Parts_Order</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Catch_Analysis_Description__c</fullName>
        <description>检测号</description>
        <label>Catch Analysis Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Catch_Analysis__c</fullName>
        <defaultValue>false</defaultValue>
        <description>返厂检测</description>
        <label>Catch Analysis</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DOA_Description__c</fullName>
        <label>DOA Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Delivery_instruction__c</fullName>
        <label>Delivery instruction</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Escalate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Escalate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HPE_Order_Num__c</fullName>
        <externalId>true</externalId>
        <label>HPE Order Num</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IGSO_Parts_Number__c</fullName>
        <label>IGSO Parts Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IS_DMR__c</fullName>
        <defaultValue>false</defaultValue>
        <description>备件是否是硬盘</description>
        <label>IS DMR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Internally_Absorbed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Internally Absorbed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Need_Anti_Fake_check__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Need Anti-Fake check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>New_Part_Arrival_Date__c</fullName>
        <description>新备件到达客户现场时间</description>
        <label>New Part Arrival Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Offered_Parts_GP__c</fullName>
        <formula>Offered_Parts__r.General_Product__c</formula>
        <label>Offered Parts: GP</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Offered_Parts_ID__c</fullName>
        <formula>Offered_Parts__r.Support_BOM_ID__c</formula>
        <label>Offered Parts: ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Offered_Parts_Name__c</fullName>
        <formula>Offered_Parts__r.Name</formula>
        <label>Offered Parts: Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Offered_Parts__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Offered Parts</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Parts__c.General_Product__c</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Parts__c</referenceTo>
        <relationshipLabel>Parts Order (Offered Parts)</relationshipLabel>
        <relationshipName>Offered_To_Parts_PO</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Offered_S_Plant__c</fullName>
        <label>Offered S Plant</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <referenceTo>Order__c</referenceTo>
        <relationshipLabel>Parts Order</relationshipLabel>
        <relationshipName>Parts_Order</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Origin_Parts__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Origin Parts</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Parts__c.General_Product__c</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Parts__c</referenceTo>
        <relationshipLabel>Parts Order</relationshipLabel>
        <relationshipName>Origin_To_Parts_PO</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Original_Parts_Commodity__c</fullName>
        <formula>Origin_Parts__r.Commodity__c</formula>
        <label>Original Parts Commodity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_Parts_GP__c</fullName>
        <formula>Origin_Parts__r.General_Product__c</formula>
        <label>Original Parts: GP</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_Parts_ID__c</fullName>
        <formula>Offered_Parts__r.Support_BOM_ID__c</formula>
        <label>Original Parts: ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PGI_Date__c</fullName>
        <description>库房发货时间</description>
        <label>PGI Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>POD_DateTime__c</fullName>
        <description>工程师填写备件接收时间</description>
        <label>Part Received Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Part_Return_DT__c</fullName>
        <description>备件返回时间</description>
        <label>Parts Return Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Parts_Description_Text__c</fullName>
        <label>Parts Des</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parts_Description__c</fullName>
        <formula>Request_Parts__r.Description__c</formula>
        <label>Request Parts Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parts_Doa__c</fullName>
        <description>DOA状态描述</description>
        <label>Parts Doa</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>X_Failure_Cd__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>无法加电</fullName>
                </value>
                <value>
                    <fullName>主机不识别</fullName>
                </value>
                <value>
                    <fullName>频繁重启</fullName>
                </value>
                <value>
                    <fullName>其他</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Parts_Order_ID__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <label>Parts Order 18 ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parts_Request_DT__c</fullName>
        <label>Parts Request DT</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Parts_Serial_Number__c</fullName>
        <label>Parts Serial Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parts_Usage__c</fullName>
        <label>Parts Usage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Used/Consumed</fullName>
                </value>
                <value>
                    <fullName>Used Not Consumed</fullName>
                </value>
                <value>
                    <fullName>Unused</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Promised_DT__c</fullName>
        <label>Promised DT</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>RMA__c</fullName>
        <label>RMA</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Removed_Parts_GP__c</fullName>
        <formula>Removed_Parts__r.General_Product__c</formula>
        <label>Removed Parts: GP</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Removed_Parts_ID__c</fullName>
        <formula>Removed_Parts__r.Support_BOM_ID__c</formula>
        <label>Removed Parts: ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Removed_Parts_Serial_Number__c</fullName>
        <label>Removed Parts Serial Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Removed_Parts_Status__c</fullName>
        <label>Removed Parts Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Good</fullName>
                </value>
                <value>
                    <fullName>Bad</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Removed_Parts__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Removed Parts</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Parts__c.General_Product__c</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Parts__c</referenceTo>
        <relationshipLabel>Parts Order (Removed Parts)</relationshipLabel>
        <relationshipName>Removed_To_Parts_PO</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Request_Parts_Commodity__c</fullName>
        <formula>Request_Parts__r.Commodity__c</formula>
        <label>Request Parts Commodity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_Parts_GP__c</fullName>
        <formula>Request_Parts__r.General_Product__c</formula>
        <label>Request Parts: GP</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_Parts_ID__c</fullName>
        <formula>Request_Parts__r.Support_BOM_ID__c</formula>
        <label>Request Parts: ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_Parts__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Request Parts</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Parts__c.General_Product__c</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Parts__c</referenceTo>
        <relationshipLabel>Parts Order (Request Parts)</relationshipLabel>
        <relationshipName>Request_To_Parts_PO</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Request_S_Plant__c</fullName>
        <label>Request S Plant</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Return_Override__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Return Override</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Return_Part_Tracking_No__c</fullName>
        <description>寄回备件的运单号（可以是旧备件也可以是新备件）</description>
        <label>Return Part Tracking No</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SPMS_Message__c</fullName>
        <label>SPMS Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Send_Parts_Flg__c</fullName>
        <label>Send Parts Flg</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_Plant__c</fullName>
        <label>Ship Plant</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Locked</fullName>
                </value>
                <value>
                    <fullName>Shipped</fullName>
                </value>
                <value>
                    <fullName>Back Ordered</fullName>
                </value>
                <value>
                    <fullName>Escalated</fullName>
                </value>
                <value>
                    <fullName>POD</fullName>
                </value>
                <value>
                    <fullName>Recommand</fullName>
                    <default>true</default>
                    <label>Recommand</label>
                </value>
                <value>
                    <fullName>Ordered</fullName>
                </value>
                <value>
                    <fullName>Send Update</fullName>
                </value>
                <value>
                    <fullName>Canceled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tracking__c</fullName>
        <label>Tracking</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Use_Requested__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use Requested</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X_Failure_Cd__c</fullName>
        <description>72=Unused;
74=Verified Failure;
55=Used + not consumed;
PD=Used + not consumed;
MS=Miss shipment;
WP=Used + not consumed;</description>
        <inlineHelpText>72=Unused;
74=Verified Failure;
55=Used + not consumed;
PD=Used + not consumed;
MS=Miss shipment;
WP=Used + not consumed;</inlineHelpText>
        <label>X Failure Cd</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Status__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>55 - DOA/DFS</fullName>
                </value>
                <value>
                    <fullName>74 - Verified Failure</fullName>
                </value>
                <value>
                    <fullName>PD - Physically Damaged</fullName>
                </value>
                <value>
                    <fullName>WP - Wrong Part in Box</fullName>
                </value>
                <value>
                    <fullName>72 - Unused</fullName>
                </value>
                <value>
                    <fullName>MS - Miss Shipment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Parts Order</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>X_Failure_Cd__c</columns>
        <columns>Offered_Parts__c</columns>
        <columns>Parts_Serial_Number__c</columns>
        <columns>Removed_Parts__c</columns>
        <columns>Removed_Parts_Serial_Number__c</columns>
        <columns>Removed_Parts_Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
        <sharedTo>
            <portalRole>ROPSGuiYangTeam2</portalRole>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Parts Order Number</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>CheckCatchAnalysisDescription</fullName>
        <active>true</active>
        <errorConditionFormula>IF(Catch_Analysis__c,true,false) &amp;&amp;(ISNULL(Catch_Analysis_Description__c)|| ISBLANK( Catch_Analysis_Description__c ))</errorConditionFormula>
        <errorDisplayField>Catch_Analysis_Description__c</errorDisplayField>
        <errorMessage>Please input Catch Analysis Description!</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CheckDoaDescription</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL( Parts_Doa__c , &apos;其他&apos;) &amp;&amp; (ISNULL(DOA_Description__c )|| ISBLANK( DOA_Description__c ))</errorConditionFormula>
        <errorDisplayField>DOA_Description__c</errorDisplayField>
        <errorMessage>Please input DOA Description!</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CheckPartsDOA</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL( X_Failure_Cd__c,&apos;55 - DOA/DFS&apos;)&amp;&amp;  
ISPICKVAL( Parts_Doa__c ,&apos;&apos;)</errorConditionFormula>
        <errorDisplayField>Parts_Doa__c</errorDisplayField>
        <errorMessage>Please select  Parts Doa!</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CheckWorkOrderIsClose</fullName>
        <active>true</active>
        <description>更新辩假结果时需要检查work order 是否已关闭。如果关闭，则禁止修改</description>
        <errorConditionFormula>ISPICKVAL(Order__r.Work_Order_Name__r.Status, &apos;Closed&apos;)&amp;&amp;(ISCHANGED(Anti_Fake_SN__c)||ISCHANGED(Anti_Fake_result__c)||ISCHANGED(Need_Anti_Fake_check__c) )</errorConditionFormula>
        <errorMessage>The workorder is closed so cannot modify !</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Check_Anti_Fake_SN</fullName>
        <active>true</active>
        <description>更新Antifake结果时，Anti fake SN 为必填</description>
        <errorConditionFormula>(DATEVALUE(CreatedDate) &gt; DATE(2018,01,24)) 
&amp;&amp;( Need_Anti_Fake_check__c = true ) 
&amp;&amp;!ISPICKVAL(Anti_Fake_result__c, &apos;&apos;) 
&amp;&amp;( Anti_Fake_SN__c = &apos;&apos;)</errorConditionFormula>
        <errorDisplayField>Anti_Fake_result__c</errorDisplayField>
        <errorMessage>Please enter &quot;Anti Fake SN&quot; when anti-fake is done.</errorMessage>
    </validationRules>
</CustomObject>